demo/devops/deployments/linkerd/weather.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather
  namespace: demo
spec:
  ports:
    - name: http
      port: 8081
      protocol: TCP
  selector:
    app: weather
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: weather
    spec:
      containers:
        - image: nguyentrantrung/weather:latest
          imagePullPolicy: Always
          name: weather-container
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 125Mi
              cpu: 100m
      serviceAccountName: weather
